added functions getComputerChoice & playRound

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     </head>
     <body>
       <script src="index.js"></script>
+      <h1> ROCK, PAPER, SCISSORS</h1>
+      <input id="textBox" type="text"></input>
+      <div id="output"></div>
     </body>
 </html>
