addEventListener added although not working

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <body>
       <script src="index.js"></script>
       <h1> ROCK, PAPER, SCISSORS</h1>
-      <input id="textBox" type="text"></input>
-      <div id="output"></div>
+      <div id="container">
+        <button id="1">ROCK</button>
+        <button id="2">PAPER</button>
+        <button id="3">SCISSORS</button>
+      </div>
     </body>
 </html>
 
