added event listenters and some UI

--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <body>
       <script src="index.js"></script>
       <h1> ROCK, PAPER, SCISSORS</h1>
-      <div id="container">
-        <button id="1">ROCK</button>
-        <button id="2">PAPER</button>
-        <button id="3">SCISSORS</button>
+      <p id="roundname"></p>
+      <div id="output">
+        <button id="rock-button" class="choice-button">ROCK</button>
+        <button id="paper-button" class="choice-button">PAPER</button>
+        <button id="scissors-button" class="choice-button">SCISSORS</button>
+      </div>
+      <div id="gameresult">
+        <p id="score"></p>
+        <p id="game-result"></p>
       </div>
     </body>
 </html>
