added a fully fleshed out UI

--- a/index.html
+++ b/index.html
@@ -2,21 +2,39 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
         <title>Page Title</title>
     </head>
     <body>
       <script src="index.js"></script>
-      <h1> ROCK, PAPER, SCISSORS</h1>
-      <p id="roundname"></p>
-      <div id="output">
+      <div id="bg-element">
+        <div id="title-element">
+          <h1 id="title"> ROCK, PAPER, SCISSORS</h1>
+          <p id="context">First to 5!</p>
+        </div>
+          <p id="roundname"></p>
+        <div id="output">
         <button id="rock-button" class="choice-button">ROCK</button>
         <button id="paper-button" class="choice-button">PAPER</button>
         <button id="scissors-button" class="choice-button">SCISSORS</button>
       </div>
       <div id="gameresult">
-        <p id="score"></p>
+        <div id="gamestring">
+        <p id="yourgamestring"></p>
+        <p id="computergamestring"></p>
+        <p id="roundresult"></p>
+        </div>
+        <div id="scoreboard">
+        <p id="yourscore">You <br> <span id="score">0</span></p>
+        <p id="vs">:</p>
+        <p id="computerscore">Computer <br> <span id="score2">0</span></p>
+        </div>
+        <div class="popup-content">
         <p id="game-result"></p>
-      </div>
-    </body>
-</html>
+        <button class="restart">New Game</button>
+        </div>
+    </div>
+  </div>
+  </body>
+  </html>
 
